--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="js/ShortWall.js"></script>
     <script type="text/javascript" src="js/Table.js"></script>
     <script type="text/javascript" src="js/Cue.js"></script>
+    <script type="text/javascript" src="js/Trajectory.js"></script>
     <script type="text/javascript" src="js/Ball.js"></script>
     <script type="text/javascript" src="js/WhiteBall.js"></script>
     <script type="text/javascript" src="js/TableLight.js"></script>
