--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!--
       <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js/examples/js/controls/TrackballControls.js"></script>
     -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
 
     <script type="text/javascript" src="js/CannonUtils.js"></script>
 
