--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <script type="text/javascript" src="js/CannonUtils.js"></script>
 
+    <script type="text/javascript" src="js/utils.js"></script>
     <script type="text/javascript" src="js/Arch.js"></script>
     <script type="text/javascript" src="js/Gui.js"></script>
     <script type="text/javascript" src="js/Hole.js"></script>
@@ -56,11 +57,8 @@
         </div>
       </div>
 
-      <!--
       <div id="controlsHud" class="hide">
-      -->
-      
-        <div class="player player1 unknown layer2">
+        <div class="player player1 unknown clickable">
           <h5>Player 1 (<span></span>)</h5>
 
           <ul>
@@ -74,7 +72,7 @@
           </ul>
         </div>
 
-        <div class="player player2 unknown layer2">
+        <div class="player player2 unknown clickable">
           <h5>Player 2 (<span></span>)</h5>
 
           <ul>
@@ -88,7 +86,7 @@
           </ul>
         </div>
 
-        <div class="shootControls layer2">
+        <div class="shootControls clickable">
           <div class="power">
             Strength:
             <form>
@@ -96,20 +94,19 @@
             </form>
           </div>
 
-          <button id="btn_ball" type="button" class="btn btn-success">Hit</button>
+          <button id="hitBtn" type="button" class="btn btn-success">Hit</button>
         </div>
 
-        <ul class="gamelog list-unstyled layer2">
+        <ul class="gamelog list-unstyled clickable">
 
         </ul>
 
-        <div class="timer layer2">
+        <div class="timer clickable">
           30
         </div>
-        <div id="fps_stats_container layer2"></div>
-      <!--
+        <div id="fps_stats_container clickable"></div>
+
       </div>
-      -->
       
 
       <div id="gameover" class="hide">
