add keyboard controls

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
         <div class="timer clickable">
           30
         </div>
+        <div class="clickable">
+          <button id="focusBtn" type="button" class="btn btn-success">Focus</button>
+        </div>
         <div id="fps_stats_container clickable"></div>
 
       </div>
